从捐赠版合并部分代码